# ProjectBaseball_NRFI

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
nrfi_predictor/: __init__.py  artifacts.py  cli.py  config.py  data_sources.py  experiments.py  features.py  model.py  parks.py  predict.py  reporting.py  runner.py  strategy.py  utils.py
scripts/: lineup_refresh.py  morning_refresh.py  post_discord.py
supabase/: baseball_backend.sql
tests/: test_artifacts.py  test_features.py  test_model.py  test_predict.py  test_reporting.py  test_runner.py
